# Ferros

./: .gitignore  README.md
docs/: telemetry_codebase_analysis.md
exec_monitor/: Cargo.toml  README.md  telemetry.csv
exec_monitor/exec_monitor/: Cargo.toml  build.rs
exec_monitor/exec_monitor-common/: Cargo.toml
exec_monitor/exec_monitor-common/src/: lib.rs
exec_monitor/exec_monitor-ebpf/: Cargo.toml
exec_monitor/exec_monitor-ebpf/src/: main.rs
exec_monitor/exec_monitor/src/: bpf.rs  main.rs  poller.rs
exec_monitor/exec_monitor/src/storage/: binary.rs  csv.rs  mod.rs  multiplexer.rs  ndjson.rs
ferros/: CMakeLists.txt  README.md  processes.txt
ferros/JSON/: index.json  latest.json  telemetry_1234567890.json  telemetry_1777960868.json  telemetry_1777960869.json  telemetry_1777960870.json  telemetry_1777960871.json  telemetry_1777960872.json  telemetry_1777960873.json  telemetry_1777960874.json  telemetry_1777960875.json  telemetry_1777960876.json  telemetry_1777960877.json  telemetry_1777960878.json  telemetry_1777960926.json  telemetry_1777960927.json  telemetry_1777960928.json  telemetry_1777960929.json  telemetry_1777960930.json  telemetry_1777960931.json  telemetry_1777960932.json  telemetry_1777960933.json  telemetry_1777960934.json  telemetry_1777960935.json  telemetry_1777960936.json  telemetry_1777965107.json  telemetry_1777965108.json  telemetry_1777965109.json  telemetry_1777965110.json  telemetry_1777965111.json  telemetry_1777965112.json  telemetry_1777965113.json  telemetry_1777965114.json  telemetry_1777965115.json  telemetry_1777965116.json  telemetry_1777965117.json  telemetry_1777974669.json  telemetry_1777974670.json  telemetry_1777974671.json  telemetry_1777974672.json  (+493 more)
ferros/attack_test/: CMakeLists.txt
ferros/attack_test/scripts/: run_multi_instance.sh  run_profiles.sh  run_stress.sh  stop_stress.sh
ferros/attack_test/src/: cpu_stress.cpp  workload_profiles.cpp  workload_profiles.h
ferros/build_final/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  ferros
ferros/cmake/: bpf.cmake  userspace.cmake
ferros/dashboard/: app.js  index.html  style.css
ferros/datasets/: metadata.json
ferros/datasets/v2/validation/labels/: run_0.json  run_1.json
ferros/ebpf/: vmlinux.h
ferros/ebpf/inc/: events.h
ferros/ebpf/src/: cpu_usage.bpf.c
ferros/research/: Makefile
ferros/research/labeler/: LabelEngine  LabelEngine.cpp  Makefile
ferros/research/runner/: orchestrator.py  run_dataset.py
ferros/research/src/labeler/: labeler.cpp
ferros/research/src/simulator/: simulator.cpp
ferros/research/workloads/: Makefile  baseline  baseline.c  burst_load  burst_load.c  migration_evasion  migration_evasion.c  process_growth  process_growth.c  scheduler_stress  scheduler_stress.c  sustained_load  sustained_load.c
ferros/scripts/: build.sh  debug.sh  test.sh
ferros/shared/inc/: constants.h  events.h  types.h
ferros/userspace/inc/: cpu_usage.skel.h  loader.h  processes.h
ferros/userspace/inc/analyzer/: IAnalyzer.h
ferros/userspace/inc/analyzer/cpu/: ICPUAnalyzer.h  SchedulerAnalyzer.h
ferros/userspace/inc/analyzer/cpu/pid_analyzers/: ProcessLifecycleAnalyzer.h  ProcessLifecycleInsight.h
ferros/userspace/inc/bpf/: cpu_usage.skel.h
ferros/userspace/inc/common/: JsonSerializer.h
ferros/userspace/inc/common/serialization/: ISerializer.h
ferros/userspace/inc/common/serialization/cpu/: ICPUSerializer.h
ferros/userspace/inc/common/serialization/cpu/ProcessLifecycleSerializer/: ProcessLifecycleSerializer.h
ferros/userspace/inc/core/: Pipeline.h  loader.h
ferros/userspace/inc/mods/: CPUTelemetry.h
ferros/userspace/inc/publisher/: FrontendPublisher.h  IPublisher.h
ferros/userspace/inc/storage/: FileStorage.h
ferros/userspace/inc/telemetry/: CPUTelemetry.h  TelemetryBundle.h
ferros/userspace/src/: loader.cpp  main.cpp
ferros/userspace/src/analyzer/cpu/: SchedulerAnalyzer.cpp
ferros/userspace/src/analyzer/cpu/pid_analyzers/: ProcessLifecycleAnalyzer.cpp  ProcessLifecycleAnalyzer.h
ferros/userspace/src/analyzer/cpuAnalyzer/interface/: ICPUAnalyzer.h
ferros/userspace/src/core/: loader.cpp
ferros/userspace/src/mods/: CPUTelemetry.cpp
ferros/userspace/src/publisher/: FrontendPublisher.cpp
ferros/userspace/src/storage/: FileStorage.cpp
ferros/userspace/src/telemetry/: CPUTelemetry.cpp
telemetry/: Cargo.toml  README.md
telemetry/src/: bluetooth.rs  devices.rs  events.rs  lib.rs  main.rs  network.rs  pci.rs  sensors.rs  system.rs  usb.rs
