[workspace]
members = [
    "exec_monitor",
    "exec_monitor-common",
    "exec_monitor-ebpf",
]
default-members = ["exec_monitor", "exec_monitor-common"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
aya = { git = "https://github.com/aya-rs/aya", rev = "07391268", default-features = false }
aya-build = { git = "https://github.com/aya-rs/aya", rev = "07391268", default-features = false }
aya-ebpf = { git = "https://github.com/aya-rs/aya", rev = "07391268", default-features = false }
aya-log = { git = "https://github.com/aya-rs/aya", rev = "07391268", default-features = false }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", rev = "07391268", default-features = false }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = "1.25"
cargo_metadata = "0.15"
which = "4.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[patch.crates-io]
aya = { git = "https://github.com/aya-rs/aya", rev = "07391268" }
aya-ebpf = { git = "https://github.com/aya-rs/aya", rev = "07391268" }
aya-log = { git = "https://github.com/aya-rs/aya", rev = "07391268" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", rev = "07391268" }